Add logic, components, styles

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
   <title>My Calculator</title>
 </head>
 <body>
-  <div id="root"></div>
+  <header><h1>My Calculator</h1></header>
+  <div id="root" class="calculator"></div>
+  <footer><small>&copy; 2021  <a href="https://github.com/yocosaka" target="_blank">Yoko Saka</a></small></footer>
 </body>
 </html>
