--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,6 @@
   <title>My Calculator</title>
 </head>
 <body>
-  <header><h1>My Calculator</h1></header>
-  <div id="root" class="calculator"></div>
-  <footer><small>&copy; 2021  <a href="https://github.com/yocosaka" target="_blank">Yoko Saka</a></small></footer>
+  <div id="root"></div>
 </body>
 </html>
